<resources>
    <string name="app_name">Huwamaruwa</string>
    <string name="product_review1">Quality</string>
    <string name="product_review2">Usability</string>
    <string name="product_review3">Price</string>
    <string name="buyer_review1">Payment</string>
    <string name="buyer_review2">Product Handling</string>
    <string name="buyer_review3">Communication</string>
    <string name="seller_review1">Pricing</string>
    <string name="seller_review2">Support</string>
    <string name="seller_review3">Delivery</string>
    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="txt_review">reviews</string>
    <string name="txt_location_sort">Sort by Location</string>
    <string name="btn_pick">Picked Up</string>
    <string name="btn_intransit">In Transit</string>
    <string name="btn_delivered">Delivered</string>
    <string name="txt_notdelivered">Not Delivered</string>
    <string name="txt_newlistings">New Listings</string>
    <string name="txt_approved">Approved</string>
    <string name="txt_perday">per day</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="lblproductName">Product Name</string>
    <string name="lblCategory">Category</string>
    <string name="lblQuantity">Quantity</string>
    <string name="lblRequiredDate">Required Date</string>
    <string name="lblBudget">Budget</string>
    <string name="lblSave">Save</string>
    <string name="lblCancel">Cancel</string>
    <string name="btnsignUp">Sign up</string>
    <string name="btnsignIn">SignIn</string>
    <string name="lblAlreadyHaveAnAccount">Already have an Account?</string>
    <string name="lbldonthaveanAccount">Don\'t have an Account?</string>
    <string name="lblMyOffer">My Offer</string>
    <string name="lblRental">Rental</string>
    <string name="btnDelete">Delete</string>
    <string name="btnEdit">Edit</string>
    <string name="lblEditProfile">Edit Profile</string>
    <string name="lblRequestProduct">Request Product</string>
    <string name="lblProductRequest">Product Request</string>
    <string name="lblProfile">Profile</string>
    <string name="btnAccept">Accept</string>
    <string name="btnReject">Reject</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnUpgradeToPremium">Upgrade To Premium</string>
    <string name="btnSubmit">Submit</string>
    <string name="showOnlyPremiumRentals">show Only Premium Rentals</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="vrfyPremiumRentals">Verify Premium Rentals</string>
    <string name="doorStpDelivery">Door Step Delivery</string>
    <string name="weTkeResponsibility">We Take All Responsibility</string>
    <string name="recentView">Recently Viewed</string>
    <string name="viewMore">View More</string>
    <string name="forYou">For You</string>
    <string name="rentProduct">Rent Product</string>
    <string name="specification">Specification</string>
    <string name="feedback">FeedBack</string>
    <string name="premiumProduct">Premium Product</string>
    <string name="premiumProductDescrip">Dont Do Anything.just Rent ,We take all the Responsibilities and Delivery</string>
    <string name="visitStore">Visit Store</string>
    <string name="recentRentals">Recent Rentals</string>
    <string name="checkouts">Checkout</string>
    <string name="rentalDetails">Rental Details</string>
    <string name="address">Address</string>
    <string name="rentDate">Rent Date</string>
    <string name="contactNumber">Contact Number</string>
    <string name="duration">Duration</string>
    <string name="total">Total</string>
    <string name="deposit">Deposit</string>
    <string name="pay">Pay</string>
    <string name="chooseYourPaymentPlan">Choose Your Payment Plan</string>
    <string name="oneTimePayment">One Time Payment</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="sendRequest">Send Request</string>
    <string name="VerifiedPremiumSellers">Verified Premium Sellers</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="accountRating">Account Rating :</string>
    <string name="minimumRentalTime">Minimum Rental Time :</string>
    <string name="maximumRentalTime">Maximum Rental Time :</string>
    <string name="paymentOptionNote1">You can Pay Initial Deposit via cash on dilevry Method</string>
    <string name="paymentOptionNote2">Only You Have to do ,Make Payment To Our Dilevry Agent</string>
    <string name="nav_request_rentals">Rental Requests</string>
    <string name="nav_seller_request_rentals">Rental Requests</string>
    <string name="floatingMg_req">Request Product</string>
    <string name="floatingMg_add">Add Product</string>
    <string name="nav_seller_panel_title">Seller</string>
    <string name="no_data">Data Not Available</string>
    <string name="specs_location">Item Location :</string>
    <string name="specs_category">Category :</string>
    <string name="specs_contact">Contact Number :</string>
    <string name="specs_max_rent">Maximum Rental Time (Days) :</string>
    <string name="specs_min_rent">Minimum Rental Time (Days) :</string>
    <string name="specs_price">Price :</string>
    <string name="select_category">select Category</string>
    <string name="select_location">select Location</string>
    <string name="Property_Title">Property Title</string>
    <string name="description">Description</string>
    <string name="contact_number">Contact Number</string>
    <string name="Rental_fee">Rental Fee</string>
    <string name="deposit_Amount">Deposit Amount</string>
    <string name="addPhoto_btn">ADD PHOTO</string>
    <string name="takePhoto_btn">TAKE PHOTO</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_customer_care_title">Customer Care</string>
    <string name="nav_admin_panel_title">Admin Panel</string>
    <string name="nav_notifications_title">Notifications</string>
    <string name="nav_messages_title">Messages</string>
    <string name="nav_history_title">History</string>
    <string name="nav_rental_requests_title">Rental Requests</string>
    <string name="nav_delivery_title">Delivery</string>
    <string name="nav_categories_title">Categories</string>
    <string name="nav_favorites_title">Favorites</string>
    <string name="nav_login_title">Log In</string>
    <string name="nav_logout_title">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User Name</string>
    <string name="user_type">User Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premiumRentalRequestsTitle">Rental Request Manager</string>
    <string name="initialDeposit">Initial Deposit :</string>
    <string name="view_product">View Product</string>
    <string name="seller_id">Seller Id</string>
    <string name="seller_contact">Seller Contact Number</string>
    <string name="seller_email">Seller Email</string>
    <string name="post_ad">Post AD</string>
    <string name="categories">CATEGORY</string>
    <string name="location_user">LOCATION</string>
    <string name="depositamu">Deposit</string>
    <string name="negotiable">Negotiable</string>
    <string name="select_location_user">Select Location</string>
    <string name="product_name">Product Name</string>
    <string name="select_category_product">Select Category</string>
    <string name="no">No</string>
    <string name="premium_item">Premium Item</string>
    <string name="yes">Yes</string>
    <string name="gallery">gallery</string>
    <string name="take_photo">take photo</string>
    <string name="title_activity_others_review_card">others_review_card</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_specifications">Product Details</string>
    <string name="amount">Amount(LKR)</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="terms_and_condition">Save my card details for faster pyments. I agree to Terms and Conditions</string>
    <string name="warding_confirm_cashonDelivery">Confirm Request!</string>
    <string name="warding_confirm_cashonDelivery_description">You can pay in cash to our courier when you received the product at your doorstep.</string>
    <string name="confirm">Confirm</string>
    <string name="rent_date">Rent Date:</string>
    <string name="status">Status :</string>
    <string name="history_user_name">User Name :</string>
    <string name="clear_history">Clear History</string>
    <string name="store">Store</string>
    <string name="contact_user">Contact Seller :</string>
    <string name="title_activity_maps">Map</string>
    <string name="close">Close</string>
    <string name="turn_on_connection">Turn On Connection</string>
    <string name="connection_time_out">Connection Time Out !</string>
    <string name="add_location">Add Location</string>
</resources>