<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:background="@color/lightGreenBtn"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgRequestRent_list_main"
            android:layout_width="186dp"
            android:layout_height="299dp"
            android:layout_margin="5dp"
            android:layout_weight="30"
            app:srcCompat="@drawable/request_vector" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRequestRent_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtRequestRent_list_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/duration"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtRequestRent_list_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/total"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtRequestRent_list_deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/initialDeposit" />

            <EditText
                android:id="@+id/edtRequestRent_list_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/contactNumber" />

            <EditText
                android:id="@+id/edtRequestRent_list_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/address" />

            <EditText
                android:id="@+id/edtRequestRent_list_seller_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/seller_id" />

            <EditText
                android:id="@+id/edtRequestRent_list_seller_contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/seller_contact" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreenBtn"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnRequestRent_list_accept"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtn"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/done_vectore" />

        <ImageButton
            android:id="@+id/btnRequestRent_list_reject"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtn"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/reject_vector" />

        <ImageButton
            android:id="@+id/btnRequestRent_list_edit"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtn"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/edit_vector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreenBtn"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRequestRent_list_viewProduct"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/view_product" />
    </LinearLayout>


</LinearLayout>