<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/lightGreenBtn"
    android:gravity="bottom"


    android:orientation="vertical"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF"

            android:onClick="ViewUserProfile"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDone"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnDone" />

        <Button

            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="34dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/roboto"
            android:onClick="LogoutMethod"
            android:text="@string/nav_logout_title"
            android:textColor="@color/GreenMain"
            android:textSize="14sp"
            app:icon="@drawable/log_out_icon"
            app:iconTint="@color/GreenMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/LoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ViewUserProfile"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LoginSellerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_type" />

</LinearLayout>